# litestar-browser-reload

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
example/: app.py
example/static/: reload-listener.js  reload-worker.js
example/templates/: index.html.j2
src/litestar_browser_reload/: __about__.py  __init__.py
src/litestar_browser_reload/static/: reload-listener.js  reload-worker.js  reload.js
