[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litestar-browser-reload"
dynamic = ["version"]
description = 'Automatic browser reload plugin for Litestar, designed for development use.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["litestar", "autoreload", "browser"]
authors = [
  { name = "Tobi DEGNON", email = "tobidegnon@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development",
  "Typing :: Typed",
  "Intended Audience :: Developers",
]
dependencies = ["litestar[standard]", "watchfiles"]

[project.urls]
Documentation = "https://github.com/Tobi-De/litestar-browser-reload#readme"
Issues = "https://github.com/Tobi-De/litestar-browser-reload/issues"
Source = "https://github.com/Tobi-De/litestar-browser-reload"

[tool.hatch.version]
path = "src/litestar_browser_reload/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/litestar_browser_reload tests}"

[tool.coverage.run]
source_pkgs = ["litestar_browser_reload", "tests"]
branch = true
parallel = true
omit = [
  "src/litestar_browser_reload/__about__.py",
]

[tool.coverage.paths]
litestar_browser_reload = ["src/litestar_browser_reload", "*/litestar-browser-reload/src/litestar_browser_reload"]
tests = ["tests", "*/litestar-browser-reload/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
